{{$NEXT}}

0.13     2018-04-06

- Fixed warning in migration name comparison.


0.12     2017-03-10

- Replaced unnecessary use of File::Slurp with Path::Class::File's slurp
  method.


0.11     2014-04-08

- Changed the logging form Core so that when a database already exists this
  message is logged at the debug level, not info.


0.10     2014-02-06

- Previously, passing any one of username, password, host, or port from the
  command line would set the relevant attribute's value to "1", rather than
  what you passed. Reported by Lasse Makholm. RT #92726.

- The SQL used to insert a migration into the migration table now uses the
  column name. This allows you to put other columns in the table. Patch by
  Lasse Makholm. RT #92725.


0.09     2013-08-03

- Two migrations that started with the same number (01-foo and 01-bar) would
  not be sorted correctly. (But hopefully you never name things in such a
  confusing manner anyway). Patch by Reini Urban. RT #87205.


0.08     2013-07-18

- The Core role didn't load File::Slurp, which it needs to run Perl script
  migration files. Fixed by Olaf Alders.


0.07     2013-06-16

- Require implementations to provide the driver name rather than trying to
  guess it from the object's name. This was severely broken if you used a
  subclass that didn't end with something like "::mysql" or "::Pg".


0.06     2013-04-02

- Fixed some documentation errors.


0.05     2013-04-01

- Renamed the user attribute to username, but the former will still be
  supported by the constructor.

- Lots of refactorings to the Core role in preparation for
  Database::Migrator::Pg release.

- Added a class that helps with live tests - Test::Database::Migrator.


0.04     2012-04-22

- The logger attribute was not lazy, so it could be built before the quiet
  option was processed. This effectively meant that the quiet option was
  ignored.


0.03     2012-04-14

- Added missing prereqs on MooseX::Types and MooseX::Types::Path::Class.

