@@ -37,13 +37,20 @@ the migration. Migrations are applied in sorted order. If the migrations start
 with numbers, they are sorted by these numbers, otherwise they are sorted
 alphabetically.
 
-The migration directory can either contain files with SQL or Perl. If a file
-ends in ".sql", the migration runner code will feed it to the appropriate
-command line utility for your database.
+The migration directory can contain files with SQL, Perl, or executable
+programs.
 
-Otherwise the file is assumed to contain Perl code. This code is expected to
-return a single anonymous subroutine when C<eval>ed. This subroutine will then
-be called with the C<Database::Migrator> object as its only argument.
+If a file ends in ".sql", the migration runner code will feed it to the
+appropriate command line utility for your database.
+
+Otherwise, if the file is executable, then it is assumed to be a program that
+will apply a migration when run. The migration runner runs it. It is not
+provided a database handle.
+
+If neither of the above conditions are met, the file is assumed to contain Perl
+code. This code is expected to return a single anonymous subroutine when
+C<eval>ed. This subroutine will then be called with the C<Database::Migrator>
+object as its only argument.
 
 Each file in a single migration's directory is run in sorted order. You can
 use numeric prefixes on these files if necessary.
