@@ -9,6 +9,7 @@ our $VERSION = '0.14';
 use Database::Migrator::Types qw( ArrayRef Bool Dir File Maybe Str );
 use DBI;
 use Eval::Closure qw( eval_closure );
+use IPC::Run3 qw( run3 );
 use Log::Dispatch;
 use Moose::Util::TypeConstraints qw( duck_type );
 use MooseX::Getopt::OptionTypeMap;
@@ -175,6 +176,19 @@ sub _run_one_migration {
         if ( $file =~ /\.sql/ ) {
             $self->logger()->debug(" - running $basename as sql");
             $self->_run_ddl($file);
+        }
+        elsif ( -x $file ) {
+            $self->logger->debug(
+                " - running $basename as a separate program");
+
+            next if $self->dry_run;
+
+            my @command = ( $file->absolute->stringify );
+            my $stderr  = q{};
+            run3( \@command, \undef, \undef, \$stderr );
+            if ( $? != 0 || $stderr ne q{} ) {
+                die "$file failed: $stderr";
+            }
         }
         else {
             $self->logger()->debug(" - running $basename as perl code");
