@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- Migration files that are executable are now executed as a separate process.
+  The migrator will report an error if such programs exit with non-zero status
+  or if they output anything to stderr. Please note that if you have non-.sql
+  suffixed migration files that are executable they will now be executed as a
+  separate program rather than as eval'd Perl code.
+
 0.13     2018-04-06
 
 - Fixed warning in migration name comparison.
